components/rs8cssgof-go/base/service.yaml
apiVersion: v1
kind: Service
metadata: 
  labels: 
    app.kubernetes.io/instance: rs8cssgof-go
    app.kubernetes.io/managed-by: kustomize
    app.kubernetes.io/name: rs8cssgof-go 
  name: rs8cssgof-go
spec:
  ports:
  - port: 8081 
    targetPort: 8081 
  selector:
    app.kubernetes.io/instance: rs8cssgof-go
