components/rs8cssgof-go/base/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata: 
  labels: 
    app.kubernetes.io/instance: rs8cssgof-go
    app.kubernetes.io/managed-by: kustomize
    app.kubernetes.io/name: rs8cssgof-go 
  name: rs8cssgof-go
spec:
  port:
    targetPort: 8081 
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: rs8cssgof-go
    weight: 100
